package controll;

public class Main {

	public static void main(String[] args) {
		
		LatexConcatinator concatinator = new LatexConcatinator();
		concatinator.concat("test");
	}
}
